[package]
name = "rustf8"
version = "0.9.0"
authors = ["Luis Malheiro <luismalheiro@gmail.com>"]
edition = "2018"
keywords = [ "UTF-8", "Unicode", "decoder" ]
description = "An iterator to decode a single UTF-8 character from a stream."
categories = [ "encoding", "internationalization", "parsing" ]
license = "MIT"

[dependencies]
thiserror = "1.0.20"

[dev-dependencies]
tempfile = "3.1.0"
